--- a/Week4_Loops_Patterns_Problems_main.ipynb
+++ b/Week4_Loops_Patterns_Problems_main.ipynb
@@ -39,9 +39,33 @@
    "execution_count": null,
    "id": "e56c3639",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 x 1 = 5\n",
+      "5 x 2 = 10\n",
+      "5 x 3 = 15\n",
+      "5 x 4 = 20\n",
+      "5 x 5 = 25\n",
+      "5 x 6 = 30\n",
+      "5 x 7 = 35\n",
+      "5 x 8 = 40\n",
+      "5 x 9 = 45\n",
+      "5 x 10 = 50\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here for Problem 1\n"
+    "# Write your code here for Problem 1\n",
+    "\n",
+    "\n",
+    "n = int(input(\"Enter a positive integer\"))\n",
+    "\n",
+    "for i in range(1, 11):\n",
+    "    print(f\"{n} x {i} = {n * i}\")\n",
+    "\n"
    ]
   },
   {
@@ -90,12 +114,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e3721ecf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of first 10 natural numbers is: 55\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here for Problem 3\n"
+    "# Write your code here for Problem 3\n",
+    "\n",
+    "n = int(input(\"Enter a positive integer: \"))\n",
+    "\n",
+    "\n",
+    "sum = 0\n",
+    "\n",
+    "i = 0\n",
+    "while i <= n:\n",
+    "    sum += i\n",
+    "    i += 1\n",
+    "    \n",
+    "print(f\"The sum of first {n} natural numbers is: {sum}\")"
    ]
   },
   {
@@ -119,14 +163,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e347010e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average marks is:  78.80\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your code here for Problem 4\n",
     "# Feel free to change the list to test different values\n",
-    "marks = [72, 88, 91, 64, 79]\n"
+    "\n",
+    "marks = [72, 88, 91, 64, 79]\n",
+    "\n",
+    "total = 0 \n",
+    "\n",
+    "for i in marks:\n",
+    "    total+= i  #similar to total = total+i\n",
+    "\n",
+    "average =  total / len(marks)\n",
+    "\n",
+    "print(f\"The average marks is: {average: .2f}\")\n"
    ]
   },
   {
@@ -171,16 +233,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1b717d81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of vowels in the given text is: 5\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here for Problem 6\n"
+    "# Write your code here for Problem 6\n",
+    "\n",
+    "text = input (\"Enter a word or a line of text: \").lower()\n",
+    "\n",
+    "vowels = \"aeiou\"\n",
+    "\n",
+    "count = 0 \n",
+    "\n",
+    "for char in text:\n",
+    "    if char in vowels:\n",
+    "        count = count + 1\n",
+    "\n",
+    "print(f\"The number of vowels in the given text is: {count}\")"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
