--- a/04_making_tables.ipynb
+++ b/04_making_tables.ipynb
@@ -140,11 +140,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b6ded19d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 ounces is equal to 283.50 grams.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ounces = int(input(\"Enter the number of ounces: \"))\n",
+    "\n",
+    "grams = ounces * 28.3495\n",
+    "\n",
+    "print(f\"{ounces} ounces is equal to {grams:.2f} grams.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,11 +170,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "39819c57",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ounces\tGrams\n",
+      "----\t-----\n",
+      "1\t28.35\n",
+      "2\t56.70\n",
+      "3\t85.05\n",
+      "4\t113.40\n",
+      "5\t141.75\n",
+      "6\t170.10\n",
+      "7\t198.45\n",
+      "8\t226.80\n",
+      "9\t255.15\n",
+      "10\t283.50\n",
+      "11\t311.84\n",
+      "12\t340.19\n",
+      "13\t368.54\n",
+      "14\t396.89\n",
+      "15\t425.24\n",
+      "16\t453.59\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Ounces\\tGrams\")\n",
+    "print (\"----\\t-----\")\n",
+    "\n",
+    "for ounces in range (1, 17):\n",
+    "    grams = ounces * 28.3495\n",
+    "    print (f\"{ounces}\\t{grams:.2f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,11 +218,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ca9c8144",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ounces\tGrams\n",
+      "----\t-----\n",
+      "1\t28.35\n",
+      "2\t56.70\n",
+      "3\t85.05\n",
+      "4\t113.40\n",
+      "5\t141.75\n",
+      "6\t170.10\n",
+      "7\t198.45\n",
+      "8\t226.80\n",
+      "9\t255.15\n",
+      "10\t283.50\n",
+      "11\t311.84\n",
+      "12\t340.19\n",
+      "13\t368.54\n",
+      "14\t396.89\n",
+      "15\t425.24\n",
+      "16\t453.59\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Ounces\\tGrams\")\n",
+    "print (\"----\\t-----\")\n",
+    "\n",
+    "ounces = 1\n",
+    "while ounces <= 16:\n",
+    "    grams = ounces * 28.3495\n",
+    "    print (f\"{ounces}\\t{grams:.2f}\")\n",
+    "    ounces += 1"
+   ]
   },
   {
    "cell_type": "markdown",
