--- a/04_making_tables.ipynb
+++ b/04_making_tables.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "ca9c8144",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
     "while ounces <= 16:\n",
     "    grams = ounces * 28.3495\n",
     "    print (f\"{ounces}\\t{grams:.2f}\")\n",
-    "    ounces += 1"
+    "    ounces = ounces + 1"
    ]
   },
   {
@@ -268,19 +268,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "97b49e1e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 green bottles hanging on the wall,\n",
+      "10 green bottles hanging on the wall,\n",
+      "And if 1 green bottle should accidentally fall,\n",
+      "There'll be 9 green bottles hanging on the wall.\n",
+      "\n",
+      "9 green bottles hanging on the wall,\n",
+      "9 green bottles hanging on the wall,\n",
+      "And if 1 green bottle should accidentally fall,\n",
+      "There'll be 8 green bottles hanging on the wall.\n",
+      "\n",
+      "8 green bottles hanging on the wall,\n",
+      "8 green bottles hanging on the wall,\n",
+      "And if 1 green bottle should accidentally fall,\n",
+      "There'll be 7 green bottles hanging on the wall.\n",
+      "\n",
+      "7 green bottles hanging on the wall,\n",
+      "7 green bottles hanging on the wall,\n",
+      "And if 1 green bottle should accidentally fall,\n",
+      "There'll be 6 green bottles hanging on the wall.\n",
+      "\n",
+      "6 green bottles hanging on the wall,\n",
+      "6 green bottles hanging on the wall,\n",
+      "And if 1 green bottle should accidentally fall,\n",
+      "There'll be 5 green bottles hanging on the wall.\n",
+      "\n",
+      "5 green bottles hanging on the wall,\n",
+      "5 green bottles hanging on the wall,\n",
+      "And if 1 green bottle should accidentally fall,\n",
+      "There'll be 4 green bottles hanging on the wall.\n",
+      "\n",
+      "4 green bottles hanging on the wall,\n",
+      "4 green bottles hanging on the wall,\n",
+      "And if 1 green bottle should accidentally fall,\n",
+      "There'll be 3 green bottles hanging on the wall.\n",
+      "\n",
+      "3 green bottles hanging on the wall,\n",
+      "3 green bottles hanging on the wall,\n",
+      "And if 1 green bottle should accidentally fall,\n",
+      "There'll be 2 green bottles hanging on the wall.\n",
+      "\n",
+      "2 green bottles hanging on the wall,\n",
+      "2 green bottles hanging on the wall,\n",
+      "And if 1 green bottle should accidentally fall,\n",
+      "There'll be 1 green bottles hanging on the wall.\n",
+      "\n",
+      "1 green bottles hanging on the wall,\n",
+      "1 green bottles hanging on the wall,\n",
+      "And if 1 green bottle should accidentally fall,\n",
+      "There'll be no green bottles hanging on the wall.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for loop version\n",
+    "\n",
+    "for i in range (10, 0, -1):\n",
+    "    print(f\"{i} green bottles hanging on the wall,\")\n",
+    "    print(f\"{i} green bottles hanging on the wall,\")\n",
+    "    print(\"And if 1 green bottle should accidentally fall,\")\n",
+    "    \n",
+    "    if i - 1 > 0:\n",
+    "        print(f\"There'll be {i - 1} green bottles hanging on the wall.\")\n",
+    "    else:\n",
+    "        print(\"There'll be no green bottles hanging on the wall.\\n\")\n",
+    "    \n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "51505c4c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 green bottles hanging on the wall,\n",
+      "10 green bottles hanging on the wall,\n",
+      "And if one green bottle should accidentally fall,\n",
+      "There'll be 9 green bottles hanging on the wall.\n",
+      "\n",
+      "9 green bottles hanging on the wall,\n",
+      "9 green bottles hanging on the wall,\n",
+      "And if one green bottle should accidentally fall,\n",
+      "There'll be 8 green bottles hanging on the wall.\n",
+      "\n",
+      "8 green bottles hanging on the wall,\n",
+      "8 green bottles hanging on the wall,\n",
+      "And if one green bottle should accidentally fall,\n",
+      "There'll be 7 green bottles hanging on the wall.\n",
+      "\n",
+      "7 green bottles hanging on the wall,\n",
+      "7 green bottles hanging on the wall,\n",
+      "And if one green bottle should accidentally fall,\n",
+      "There'll be 6 green bottles hanging on the wall.\n",
+      "\n",
+      "6 green bottles hanging on the wall,\n",
+      "6 green bottles hanging on the wall,\n",
+      "And if one green bottle should accidentally fall,\n",
+      "There'll be 5 green bottles hanging on the wall.\n",
+      "\n",
+      "5 green bottles hanging on the wall,\n",
+      "5 green bottles hanging on the wall,\n",
+      "And if one green bottle should accidentally fall,\n",
+      "There'll be 4 green bottles hanging on the wall.\n",
+      "\n",
+      "4 green bottles hanging on the wall,\n",
+      "4 green bottles hanging on the wall,\n",
+      "And if one green bottle should accidentally fall,\n",
+      "There'll be 3 green bottles hanging on the wall.\n",
+      "\n",
+      "3 green bottles hanging on the wall,\n",
+      "3 green bottles hanging on the wall,\n",
+      "And if one green bottle should accidentally fall,\n",
+      "There'll be 2 green bottles hanging on the wall.\n",
+      "\n",
+      "2 green bottles hanging on the wall,\n",
+      "2 green bottles hanging on the wall,\n",
+      "And if one green bottle should accidentally fall,\n",
+      "There'll be 1 green bottles hanging on the wall.\n",
+      "\n",
+      "1 green bottles hanging on the wall,\n",
+      "1 green bottles hanging on the wall,\n",
+      "And if one green bottle should accidentally fall,\n",
+      "There'll be no green bottles hanging on the wall.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# While loop version\n",
+    "\n",
+    "i = 10\n",
+    "while i > 0:\n",
+    "    print(f\"{i} green bottles hanging on the wall,\")\n",
+    "    print(f\"{i} green bottles hanging on the wall,\")\n",
+    "    print(\"And if one green bottle should accidentally fall,\")\n",
+    "    i -= 1\n",
+    "    if i > 0:\n",
+    "        print(f\"There'll be {i} green bottles hanging on the wall.\")\n",
+    "    else:\n",
+    "        print(\"There'll be no green bottles hanging on the wall.\")\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -295,11 +438,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "4d506d3f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Litres \t Pints\n",
+      "------ \t -----\n",
+      "1 \t 1.76\n",
+      "2 \t 3.52\n",
+      "4 \t 7.04\n",
+      "8 \t 14.08\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Litres \\t Pints\")\n",
+    "print(\"------ \\t -----\")\n",
+    "\n",
+    "for litres in [1,2,4,8]:\n",
+    "    pints = litres * 1.76\n",
+    "    print(f\"{litres} \\t {pints:.2f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -311,11 +474,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "390c7f3b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "size = int(input(\"Enter the size of the square: \"))\n",
+    "\n",
+    "for i in range(size):\n",
+    "    for j in range(size):\n",
+    "        print(\"*\", end=\" \")\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -327,11 +509,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "e9e23784",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * * * * \n",
+      "* * * * * * * * \n",
+      "* * * * * * * * \n",
+      "* * * * * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "size_height = int(input(\"Enter the size of the rectangle (height width): \"))\n",
+    "size_width = int(input(\"Enter the width of the rectangle: \"))\n",
+    "\n",
+    "for i in range(size_height):\n",
+    "    for j in range (size_width):\n",
+    "        print(\"*\", end=\" \")\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -343,11 +544,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "386f0d87",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "height = int (input(\"Enter the height of the triangle: \"))\n",
+    "\n",
+    "for i in range (1, height+1):\n",
+    "    for j in range (i):\n",
+    "        print(\"*\", end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "bd09b065",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              * \n",
+      "            * * * \n",
+      "          * * * * * \n",
+      "        * * * * * * * \n",
+      "      * * * * * * * * * \n",
+      "    * * * * * * * * * * * \n",
+      "  * * * * * * * * * * * * * \n",
+      "* * * * * * * * * * * * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pyramid pattern\n",
+    "\n",
+    "rows = int(input(\"Enter number of rows: \"))\n",
+    "\n",
+    "k = 0\n",
+    "\n",
+    "for i in range(1, rows+1):\n",
+    "    for space in range(1, (rows-i)+1):\n",
+    "        print(end=\"  \")\n",
+    "   \n",
+    "    while k!=(2*i-1):\n",
+    "        print(\"* \", end=\"\")\n",
+    "        k += 1\n",
+    "   \n",
+    "    k = 0\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -362,11 +622,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "90cdf29b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "##################################\n",
+      "#\n",
+      "##\n",
+      "###\n",
+      "####\n",
+      "#####\n",
+      "######\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    shape_type = input(\"Enter shape type (square/rectangle/triangle): \").lower()\n",
+    "    \n",
+    "    if shape_type == \"square\":\n",
+    "        size = int(input(\"Enter the size of the square: \"))\n",
+    "        for i in range(size):\n",
+    "            for j in range(size):\n",
+    "                print(\"#\", end=\"\")\n",
+    "            print()\n",
+    "    \n",
+    "    elif shape_type == \"rectangle\":\n",
+    "        width = int(input(\"Enter the width of the rectangle: \"))\n",
+    "        height = int(input(\"Enter the height of the rectangle: \"))\n",
+    "        for i in range(height):\n",
+    "            for j in range(width):\n",
+    "                print(\"#\", end=\"\")\n",
+    "            print()\n",
+    "    \n",
+    "    elif shape_type == \"triangle\":\n",
+    "        height = int(input(\"Enter the height of the triangle: \"))\n",
+    "        for i in range(1, height + 1):\n",
+    "            for j in range(i):\n",
+    "                print(\"#\", end=\"\")\n",
+    "            print()\n",
+    "    \n",
+    "    else:\n",
+    "        print(\"Invalid shape type!\")\n",
+    "    \n",
+    "    again = input(\"Do you want to see another shape? (Y/N): \").upper()\n",
+    "    if again != \"Y\":\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "52426088",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid shape type! Please enter 'square', 'rectangle', or 'triangle'.\n",
+      "Invalid shape type! Please enter 'square', 'rectangle', or 'triangle'.\n",
+      "######\n",
+      "######\n",
+      "######\n",
+      "######\n",
+      "######\n",
+      "######\n",
+      "####\n",
+      "####\n",
+      "####\n",
+      "####\n",
+      "####\n",
+      "####\n",
+      "####\n",
+      "####\n",
+      "#\n",
+      "##\n",
+      "###\n",
+      "####\n",
+      "#####\n",
+      "######\n",
+      "#######\n",
+      "########\n",
+      "Invalid shape type! Please enter 'square', 'rectangle', or 'triangle'.\n",
+      "Invalid shape type! Please enter 'square', 'rectangle', or 'triangle'.\n",
+      "Invalid shape type! Please enter 'square', 'rectangle', or 'triangle'.\n",
+      "Invalid shape type! Please enter 'square', 'rectangle', or 'triangle'.\n",
+      "Invalid shape type! Please enter 'square', 'rectangle', or 'triangle'.\n",
+      "######\n",
+      "######\n",
+      "######\n",
+      "######\n",
+      "######\n",
+      "######\n",
+      "######\n",
+      "######\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    while True:\n",
+    "        shape_type = input(\"Enter shape type (square/rectangle/triangle): \").lower()\n",
+    "        if shape_type in ['square', 'rectangle', 'triangle']:\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Invalid shape type! Please enter 'square', 'rectangle', or 'triangle'.\")\n",
+    "    \n",
+    "    if shape_type == \"square\":\n",
+    "        size = int(input(\"Enter the size of the square: \"))\n",
+    "        for i in range(size):\n",
+    "            for j in range(size):\n",
+    "                print(\"#\", end=\"\")\n",
+    "            print()\n",
+    "    \n",
+    "    elif shape_type == \"rectangle\":\n",
+    "        width = int(input(\"Enter the width of the rectangle: \"))\n",
+    "        height = int(input(\"Enter the height of the rectangle: \"))\n",
+    "        for i in range(height):\n",
+    "            for j in range(width):\n",
+    "                print(\"#\", end=\"\")\n",
+    "            print()\n",
+    "    \n",
+    "    elif shape_type == \"triangle\":\n",
+    "        height = int(input(\"Enter the height of the triangle: \"))\n",
+    "        for i in range(1, height + 1):\n",
+    "            for j in range(i):\n",
+    "                print(\"#\", end=\"\")\n",
+    "            print()\n",
+    "    \n",
+    "    again = input(\"Do you want to see another shape? (Y/N): \").upper()\n",
+    "    if again != \"Y\":\n",
+    "        break"
+   ]
   },
   {
    "cell_type": "markdown",
