--- a/05_off_the_happy_path.ipynb
+++ b/05_off_the_happy_path.ipynb
@@ -403,19 +403,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "615241b3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average score is: 76.85\n",
+      "The rounded average score is: 77\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "score1 = float(input(\"Enter score for subject 1: \"))\n",
+    "score2 = float(input(\"Enter score for subject 2: \"))\n",
+    "\n",
+    "average = (score1 + score2) / 2\n",
+    "rounded_average = round(average)\n",
+    "\n",
+    "print(f\"The average score is: {average:.2f}\")\n",
+    "print(f\"The rounded average score is: {rounded_average}\")\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "bcd9d708",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Please enter valid numeric scores.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    score1 = float(input(\"Enter score for subject 1: \"))\n",
+    "    score2 = float(input(\"Enter score for subject 2: \"))\n",
+    "\n",
+    "    if score1 < 0 or score2 < 0 or score1 > 100 or score2 > 100:\n",
+    "        print(\"Error: Scores must be between 0 and 100.\")\n",
+    "    else:\n",
+    "        average = (score1 + score2) / 2\n",
+    "        rounded_average = round(average)\n",
+    "\n",
+    "        print(f\"The average score is: {average:.2f}\")\n",
+    "        print(f\"The rounded average score is: {rounded_average}\")\n",
+    "\n",
+    "except ValueError:\n",
+    "    print(\"Error: Please enter valid numeric scores.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cbfe1a01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Please enter valid numeric scores.\n",
+      "Error: Please enter valid numeric scores.\n",
+      "The average score is: 66.50\n",
+      "The rounded average score is: 66\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        score1 = float(input(\"Enter score for subject 1: \"))\n",
+    "        score2 = float(input(\"Enter score for subject 2: \"))\n",
+    "\n",
+    "        if score1 < 0 or score2 < 0 or score1 > 100 or score2 > 100:\n",
+    "            print(\"Error: Scores must be between 0 and 100.\")\n",
+    "            continue\n",
+    "        else:\n",
+    "            average = (score1 + score2) / 2\n",
+    "            rounded_average = round(average)\n",
+    "\n",
+    "            print(f\"The average score is: {average:.2f}\")\n",
+    "            print(f\"The rounded average score is: {rounded_average}\")\n",
+    "            break\n",
+    "\n",
+    "    except ValueError:\n",
+    "        print(\"Error: Please enter valid numeric scores.\")"
+   ]
   },
   {
    "cell_type": "code",
