--- a/05_off_the_happy_path.ipynb
+++ b/05_off_the_happy_path.ipynb
@@ -500,14 +500,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58fcf157",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "08a034ba",
    "metadata": {},
@@ -537,11 +529,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9be79ad7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No change due. Thanks!\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    bill_amount = float(input(\"Enter the total bill amount: £\"))\n",
+    "    amount_tendered = float(input(\"Enter the amount tendered: £\"))\n",
+    "    \n",
+    "    if bill_amount < 0 or amount_tendered < 0:\n",
+    "        print(\"Error: Amounts cannot be negative\")\n",
+    "    elif amount_tendered == bill_amount:\n",
+    "        print(\"No change due. Thanks!\")\n",
+    "    elif amount_tendered < bill_amount:\n",
+    "        shortfall = bill_amount - amount_tendered\n",
+    "        print(f\"Error: Amount tendered is insufficient. You need £{shortfall:.2f} more.\")\n",
+    "    else:\n",
+    "        change = amount_tendered - bill_amount\n",
+    "        print(f\"Change due: £{change:.2f}\")\n",
+    "\n",
+    "except ValueError:\n",
+    "    print(\"Error: Please enter valid numbers\")"
+   ]
   },
   {
    "cell_type": "code",
