--- a/05_off_the_happy_path.ipynb
+++ b/05_off_the_happy_path.ipynb
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78547d10",
+   "id": "71890543",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -585,11 +585,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "555af601",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total change: £100.00 (10000p)\n",
+      "\n",
+      "£1: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    change = float(input(\"Enter the change amount (£): \"))\n",
+    "\n",
+    "    if change < 0:\n",
+    "        print(\"Error: Change cannot be negative.\")\n",
+    "    else:\n",
+    "        # pounds to pennies\n",
+    "        pennies = round(change * 100)\n",
+    "        print(f\"Total change: £{change:.2f} ({pennies}p)\\n\")\n",
+    "\n",
+    "        # coin breakdown\n",
+    "        for value, name in [(100, \"£1\"), (50, \"50p\"), (20, \"20p\"), (10, \"10p\"), (5, \"5p\"), (2, \"2p\"), (1, \"1p\")]:\n",
+    "            count = pennies // value\n",
+    "            pennies %= value\n",
+    "            if count:\n",
+    "                print(f\"{name}: {count}\")\n",
+    "\n",
+    "except ValueError:\n",
+    "    print(\"Error: Please enter a valid number (e.g. 2.75)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ae09a5aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Change: £9.67 (967p)\n",
+      "Breakdown:\n",
+      "  £2: 4\n",
+      "  £1: 1\n",
+      "  50p: 1\n",
+      "  10p: 1\n",
+      "  5p: 1\n",
+      "  2p: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        change_amount = float(input(\"Enter the change amount in pounds: £\"))\n",
+    "        if change_amount >= 0:\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Error: Change amount cannot be negative\")\n",
+    "    except ValueError:\n",
+    "        print(\"Error: Please enter a valid number\")\n",
+    "\n",
+    "# convert to pennies\n",
+    "pennies = round(change_amount * 100)\n",
+    "print(f\"Change: £{change_amount:.2f} ({pennies}p)\")\n",
+    "\n",
+    "# coin values and names\n",
+    "coins = [200, 100, 50, 20, 10, 5, 2, 1]\n",
+    "names = [\"£2\", \"£1\", \"50p\", \"20p\", \"10p\", \"5p\", \"2p\", \"1p\"]\n",
+    "\n",
+    "print(\"Breakdown:\")\n",
+    "remaining = pennies\n",
+    "\n",
+    "for i in range(len(coins)):\n",
+    "    count = remaining // coins[i]\n",
+    "    if count > 0:\n",
+    "        print(f\"  {names[i]}: {count}\")\n",
+    "        remaining = remaining % coins[i]\n",
+    "\n",
+    "if remaining > 0:\n",
+    "    print(f\"  (Note: {remaining}p remaining due to rounding)\")"
+   ]
   },
   {
    "cell_type": "markdown",
