--- a/05_off_the_happy_path_FS4B.ipynb
+++ b/05_off_the_happy_path_FS4B.ipynb
@@ -687,6 +687,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "52428a2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------Restaurant Bill Calculator--------\n",
+      "Error: Please enter valid numbers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"-----------Restaurant Bill Calculator--------\")\n",
+    "\n",
+    "try:\n",
+    "    bill_amount = float(input(\"Enter the total bill amount: £\"))\n",
+    "    amount_tendered = float(input(\"Enter the amount tendered: £\"))\n",
+    "    \n",
+    "    if bill_amount < 0 or amount_tendered < 0:\n",
+    "        print(\"Error: Amounts cannot be negative.\")\n",
+    "    elif amount_tendered < bill_amount:\n",
+    "        shortfall = bill_amount - amount_tendered\n",
+    "        print(f\"Error: Amount tendered is insufficient. You need £{shortfall:.2f} more.\")\n",
+    "    else:\n",
+    "        change = amount_tendered - bill_amount\n",
+    "        print(f\"Change due: £{change:.2f}\")\n",
+    "\n",
+    "        # Coin breakdown\n",
+    "        pennies = round(change * 100)\n",
+    "        print(f\"Total pennies: {pennies}\")\n",
+    "\n",
+    "        for value, name in [(100, \"£1\"), (50, \"50p\"), (20, \"20p\"), (10, \"10p\"), (5, \"5p\"), (2, \"2p\"), (1, \"1p\")]:\n",
+    "            count = pennies // value\n",
+    "            pennies %= value\n",
+    "            if count:\n",
+    "                print(f\"{count} x {name} coins\")\n",
+    "\n",
+    "except ValueError:\n",
+    "    print(\"Error: Please enter valid numbers.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bb607b8c",
    "metadata": {},
