--- a/06_using_functions_CS4C.ipynb
+++ b/06_using_functions_CS4C.ipynb
@@ -170,6 +170,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94d073c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f76bb0e",
+   "metadata": {},
+   "source": [
+    "## Example of Password Problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7d4cec7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def is_valid_length(possible_password):\n",
+    "    if len(possible_password) >= 8 and len(possible_password) <= 12:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "90fa5756",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Password length not acceptable!\n"
+     ]
+    }
+   ],
+   "source": [
+    "passwd = input('Enter new password: ')\n",
+    "if is_valid_length(passwd):\n",
+    "    print('Length is OK!')\n",
+    "else:\n",
+    "    print('Password length not acceptable!')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "31fadc4c",
    "metadata": {},
@@ -197,19 +251,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e5e59b74",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The square root of 9.0 is 3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def calculate_square_root():\n",
+    "\n",
+    "    number = float(input('Enter a number to find the square root: '))\n",
+    "\n",
+    "    if number < 0:\n",
+    "        print('Cannot compute square root of negative number!')\n",
+    "    else:\n",
+    "        sqrt = math.sqrt(number)\n",
+    "        print('The square root of', number, 'is', sqrt)\n",
+    "\n",
+    "calculate_square_root()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0a4bfd69",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid input! Please enter a numeric value.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def calculate_square_root():\n",
+    "\n",
+    "    try:\n",
+    "        number = float(input('Enter a number to find the square root: '))\n",
+    "\n",
+    "        if number < 0:\n",
+    "            print('Cannot compute square root of negative number!')\n",
+    "        else:\n",
+    "            sqrt = math.sqrt(number)\n",
+    "            print('The square root of', number, 'is', sqrt)\n",
+    "            \n",
+    "    except ValueError:\n",
+    "        print('Invalid input! Please enter a numeric value.')\n",
+    "\n",
+    "calculate_square_root()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -231,8 +333,41 @@
    "execution_count": null,
    "id": "e531d580",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 69.8\n",
+      "Variance: 534.7\n",
+      "Standard Deviation: 23.12358103754693\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import math\n",
+    "import statistics\n",
+    "\n",
+    "def calculate_stats():\n",
+    "\n",
+    "    numbers = []\n",
+    "\n",
+    "    for i in range(5):\n",
+    "        num = int(input(f\"Enter number {i+1} (0-100): \"))\n",
+    "        numbers.append(num)\n",
+    "    \n",
+    "    mean = statistics.mean(numbers)\n",
+    "    variance = statistics.variance(numbers)\n",
+    "    std_dev = statistics.stdev(numbers)\n",
+    "\n",
+    "    print(f\"Mean: {mean}\")\n",
+    "    print(f\"Variance: {variance}\")\n",
+    "    print(f\"Standard Deviation: {std_dev:.2f}\")\n",
+    "\n",
+    "calculate_stats()\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -245,11 +380,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "cb7ee5fb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'LeedsBeckett': True\n",
+      "'Kazi': False\n",
+      "'Python': False\n",
+      "'DataScience': True\n",
+      "'AI': False\n",
+      "'Programming': True\n",
+      "'CS4C': False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_length(text):\n",
+    "    return 8 <= len(text) <= 12\n",
+    "\n",
+    "test_strings = [\"LeedsBeckett\", \"Kazi\", \"Python\", \"DataScience\", \"AI\", \"Programming\", \"CS4C\"]\n",
+    "for test in test_strings:\n",
+    "    result = check_length(test)\n",
+    "    print(f\"'{test}': {result}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -406,7 +563,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -420,7 +577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.4"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
