--- a/06_using_functions_CS4C.ipynb
+++ b/06_using_functions_CS4C.ipynb
@@ -420,11 +420,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e3005c03",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated password: .wjKWZ\\$\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import string\n",
+    "\n",
+    "def generate_password(length):\n",
+    "    characters = string.ascii_letters + string.digits + string.punctuation\n",
+    "    password = \"\"\n",
+    "    for i in range(length):\n",
+    "        password += random.choice(characters)\n",
+    "    return password\n",
+    "\n",
+    "password_length = int(input(\"Enter password length: \"))\n",
+    "new_password = generate_password(password_length)\n",
+    "print(f\"Generated password: {new_password}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b760f9b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated password: H)_aH9]=2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import string\n",
+    "\n",
+    "try:\n",
+    "    def generate_password(length):\n",
+    "        characters = string.ascii_letters + string.digits + string.punctuation\n",
+    "        password = \"\"\n",
+    "        for i in range(length):\n",
+    "            password += random.choice(characters)\n",
+    "        return password\n",
+    "\n",
+    "    password_length = int(input(\"Enter password length: \"))\n",
+    "    new_password = generate_password(password_length)\n",
+    "    print(f\"Generated password: {new_password}\")\n",
+    "    \n",
+    "except ValueError:\n",
+    "    print(\"Invalid input! Please enter a numeric value for password length.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -438,11 +494,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "489d8ea5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'c' in 'LeedsBeckett': True\n",
+      "'x' in 'Kazi': False\n",
+      "'y' in 'python': True\n",
+      "'z' in 'programming': False\n",
+      "'a' in 'DataScience': True\n",
+      "'I' in 'AI': True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def char_in_string(text, char):\n",
+    "    return text.count(char) > 0\n",
+    "\n",
+    "test_cases = [\n",
+    "    (\"LeedsBeckett\", \"c\"),\n",
+    "    (\"Kazi\", \"x\"),\n",
+    "    (\"python\", \"y\"),\n",
+    "    (\"programming\", \"z\"),\n",
+    "    (\"DataScience\", \"a\"),\n",
+    "    (\"AI\", \"I\")\n",
+    "]\n",
+    "\n",
+    "for text, char in test_cases:\n",
+    "    result = char_in_string(text, char)\n",
+    "    print(f\"'{char}' in '{text}': {result}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -458,11 +543,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "f5b81faf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'LeedsBeckett' has uppercase: True\n",
+      "'kazi' has uppercase: False\n",
+      "'python' has uppercase: False\n",
+      "'DataScience' has uppercase: True\n",
+      "'AI' has uppercase: True\n",
+      "'Programming' has uppercase: True\n",
+      "'cs4c' has uppercase: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def has_uppercase(text):\n",
+    "    for char in text:\n",
+    "        if char.isupper():\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "test_strings = [\"LeedsBeckett\", \"kazi\", \"python\", \"DataScience\", \"AI\", \"Programming\", \"cs4c\"]\n",
+    "for test in test_strings:\n",
+    "    result = has_uppercase(test)\n",
+    "    print(f\"'{test}' has uppercase: {result}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -474,11 +584,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "279e4730",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'LeedsBeckett': False\n",
+      "'kazi': False\n",
+      "'python03': False\n",
+      "'DataScience': False\n",
+      "'AI@lbu035': True\n",
+      "'Programming': False\n",
+      "'cs4c': False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def has_uppercase(text):\n",
+    "    return any(char.isupper() for char in text)\n",
+    "\n",
+    "def has_lowercase(text):\n",
+    "    return any(char.islower() for char in text)\n",
+    "\n",
+    "def has_digit(text):\n",
+    "    return any(char.isdigit() for char in text)\n",
+    "\n",
+    "def is_valid_password(password):\n",
+    "    return (has_uppercase(password) and \n",
+    "            has_lowercase(password) and \n",
+    "            has_digit(password))\n",
+    "\n",
+    "# Test the functions\n",
+    "test_passwords = [\"LeedsBeckett\", \"kazi\", \"python03\", \"DataScience\", \"AI@lbu035\", \"Programming\", \"cs4c\"]\n",
+    "for pwd in test_passwords:\n",
+    "    result = is_valid_password(pwd)\n",
+    "    print(f\"'{pwd}': {result}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -490,11 +634,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "89fd9725",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'LeedsBeckett': False\n",
+      "'kazi': False\n",
+      "'python03': False\n",
+      "'DataScience': False\n",
+      "'AI@lbu035': True\n",
+      "'Programming': False\n",
+      "'cs4c': False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_valid_password_complete(password):\n",
+    "    return (8 <= len(password) <= 12 and \n",
+    "            has_uppercase(password) and \n",
+    "            has_lowercase(password) and \n",
+    "            has_digit(password))\n",
+    "\n",
+    "for pwd in test_passwords:\n",
+    "    result = is_valid_password_complete(pwd)\n",
+    "    print(f\"'{pwd}': {result}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -508,11 +676,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ef3e3196",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing 10 randomly generated passwords:\n",
+      "Password 1: 'V<6%?,oPHf+BR:P2L' (length: 17) - INVALID\n",
+      "Password 2: 'K^#;\\.lhvU' (length: 10) - INVALID\n",
+      "Password 3: 'OwNU{w?Jtvw[B0bYl&' (length: 18) - INVALID\n",
+      "Password 4: 'S)N]Ph' (length: 6) - INVALID\n",
+      "Password 5: '&0bj@LcS'`!p*' (length: 13) - INVALID\n",
+      "Password 6: 'vEq%8f' (length: 6) - INVALID\n",
+      "Password 7: '+A4e4gH8' (length: 8) - VALID\n",
+      "Password 8: '@;Q@H];hd7nGC' (length: 13) - INVALID\n",
+      "Password 9: 'LG<f@{' (length: 6) - INVALID\n",
+      "Password 10: 'KZ<mg8@x' (length: 8) - VALID\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def generate_random_password():\n",
+    "    length = random.randint(6, 18)\n",
+    "    characters = string.ascii_letters + string.digits + string.punctuation\n",
+    "    password = \"\"\n",
+    "    for i in range(length):\n",
+    "        password += random.choice(characters)\n",
+    "    return password\n",
+    "\n",
+    "print(\"Testing 10 randomly generated passwords:\")\n",
+    "for i in range(10):\n",
+    "    password = generate_random_password()\n",
+    "    is_valid = is_valid_password_complete(password)\n",
+    "    if is_valid:\n",
+    "        status = \"VALID\"\n",
+    "    else:\n",
+    "        status = \"INVALID\"\n",
+    "    print(f\"Password {i+1}: '{password}' (length: {len(password)}) - {status}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -530,11 +736,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "d5a3ac4f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Password Changed Successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def change_password():\n",
+    "\n",
+    "    password1 = input(\"Enter new password: \")\n",
+    "    password2 = input(\"Confirm new password: \")\n",
+    "    \n",
+    "    if password1 != password2:\n",
+    "        print(\"Error: Passwords do not match!\")\n",
+    "        return\n",
+    "    \n",
+    "    if not is_valid_password_complete(password1):\n",
+    "        print(\"Error: Password does not meet requirements!\")\n",
+    "        print(\"Password must:\")\n",
+    "        print(\"- Be 8-12 characters long\")\n",
+    "        print(\"- Contain at least one uppercase letter\")\n",
+    "        print(\"- Contain at least one lowercase letter\")\n",
+    "        print(\"- Contain at least one digit\")\n",
+    "        return\n",
+    "    \n",
+    "    print(\"Password Changed Successfully!\")\n",
+    "\n",
+    "change_password()"
+   ]
   },
   {
    "cell_type": "markdown",
