--- a/07_data_structures_CS4C.ipynb
+++ b/07_data_structures_CS4C.ipynb
@@ -159,11 +159,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e5e59b74",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Three unique random numbers (using set): [2, 3, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def unique_random_set():\n",
+    "    unique_numbers = set()\n",
+    "    while len(unique_numbers) < 3:\n",
+    "        unique_numbers.add(random.randint(0, 10))\n",
+    "    return list(unique_numbers)\n",
+    "\n",
+    "print(\"Three unique random numbers (using set):\", unique_random_set())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,11 +195,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e531d580",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Three unique random numbers (using list): [2, 3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using list:\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "def unique_random_list():\n",
+    "    unique_numbers = []\n",
+    "    while len(unique_numbers) < 3:\n",
+    "        num = random.randint(0, 10)\n",
+    "        if num not in unique_numbers:\n",
+    "            unique_numbers.append(num)\n",
+    "    return unique_numbers\n",
+    "\n",
+    "print(\"Three unique random numbers (using list):\", unique_random_list())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -195,11 +235,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e5f6a0ff",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique characters: {' ', 'i', 'a', 'k', '2', '#', '4', 'z', '1', '3'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def unique_chars(text):\n",
+    "    unique_set = set(text)\n",
+    "    return unique_set\n",
+    "\n",
+    "text = input(\"Enter a string: \")\n",
+    "unique_chars_set = unique_chars(text)\n",
+    "print(\"Unique characters:\", unique_chars_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c48e6a2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique characters: i, a, K, 2, 4, z, 1, 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def unique_chars(text):\n",
+    "    unique_set = set(text)\n",
+    "    result = ', '.join(unique_set) # Display without brackets\n",
+    "    return result\n",
+    "\n",
+    "text = input(\"Enter a string: \")\n",
+    "print(\"Unique characters:\", unique_chars(text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -398,7 +478,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -412,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
