--- a/07_data_structures_CS4C.ipynb
+++ b/07_data_structures_CS4C.ipynb
@@ -292,11 +292,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1100cb61",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter numbers (press Enter to finish):\n",
+      "Numbers in decreasing order: [66544.0, 6789.0, 3456.0, 989.0, 777.0, 344.0, 123.0, 98.0, 77.0, 45.0, 33.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sort_numbers_decreasing():\n",
+    "    numbers = []\n",
+    "    print(\"Enter numbers (press Enter to finish):\")\n",
+    "    while True:\n",
+    "        entry = input()\n",
+    "        if entry == \"\":\n",
+    "            break\n",
+    "        numbers.append(float(entry))\n",
+    "    \n",
+    "    numbers.sort(reverse=True)\n",
+    "    return numbers\n",
+    "\n",
+    "result = sort_numbers_decreasing()\n",
+    "print(\"Numbers in decreasing order:\", result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -308,11 +332,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d9acdd78",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter strings (press Enter to finish):\n",
+      "Strings sorted by length: ['lbu', 'kazi', '4567', 'leedsbeckett', 'helloworld1234']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sort_strings_by_length():\n",
+    "    strings = []\n",
+    "    print(\"Enter strings (press Enter to finish):\")\n",
+    "    while True:\n",
+    "        entry = input()\n",
+    "        if entry == \"\":\n",
+    "            break\n",
+    "        strings.append(entry)\n",
+    "    \n",
+    "    strings.sort(key=len)\n",
+    "    return strings\n",
+    "\n",
+    "result = sort_strings_by_length()\n",
+    "print(\"Strings sorted by length:\", result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -326,11 +374,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0901e205",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "User Information:\n",
+      "Name: Kazi Nabiul Alam\n",
+      "Age: 27\n",
+      "Email: k.n.alam@leedsbeeckett.ac.uk\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_user_info():\n",
+    "    name = input(\"Enter your name: \")\n",
+    "    age = input(\"Enter your age: \")\n",
+    "    email = input(\"Enter your email: \")\n",
+    "    return name, age, email  # This creates a tuple\n",
+    "\n",
+    "\n",
+    "user_info = get_user_info()\n",
+    "print(\"\\nUser Information:\")\n",
+    "print(f\"Name: {user_info[0]}\")\n",
+    "print(f\"Age: {user_info[1]}\")\n",
+    "print(f\"Email: {user_info[2]}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -346,11 +419,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4b72b1c5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sentence is: I am Kazi. I live in Leeds. \n",
+      "Letter counts:\n",
+      "a: 2\n",
+      "d: 1\n",
+      "e: 3\n",
+      "i: 5\n",
+      "k: 1\n",
+      "l: 2\n",
+      "m: 1\n",
+      "n: 1\n",
+      "s: 1\n",
+      "v: 1\n",
+      "z: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from string import ascii_lowercase as letters\n",
+    "\n",
+    "def count_letters(sentence):\n",
+    "    counts = dict.fromkeys(letters, 0)\n",
+    "    \n",
+    "    for char in sentence.lower():\n",
+    "        if char in counts:\n",
+    "            counts[char] += 1\n",
+    "    \n",
+    "    return counts\n",
+    "\n",
+    "sentence = input(\"Enter a sentence: \")\n",
+    "letter_counts = count_letters(sentence)\n",
+    "\n",
+    "print(f\"The sentence is: {sentence}\")\n",
+    "print(\"Letter counts:\")\n",
+    "for letter, count in letter_counts.items():\n",
+    "    if count > 0:\n",
+    "        print(f\"{letter}: {count}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -364,11 +477,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8d64d0aa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sentence is: I am Kazi. I live in Leeds. \n",
+      "Number of unique letters: 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_unique_letters(sentence):\n",
+    "    unique_letters = set()\n",
+    "    \n",
+    "    for char in sentence.lower():\n",
+    "        if char.isalpha():\n",
+    "            unique_letters.add(char)\n",
+    "    \n",
+    "    return len(unique_letters)\n",
+    "\n",
+    "unique_count = count_unique_letters(sentence)\n",
+    "\n",
+    "print(f\"The sentence is: {sentence}\")\n",
+    "print(f\"Number of unique letters: {unique_count}\")"
+   ]
   },
   {
    "cell_type": "markdown",
