--- a/07_data_structures_CS4C.ipynb
+++ b/07_data_structures_CS4C.ipynb
@@ -525,11 +525,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6c5d5178",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sentence is: I am Kazi. I live in Leeds.\n",
+      "Longest word(s): ['Leeds']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from string import punctuation\n",
+    "\n",
+    "def find_longest_words(sentence):\n",
+    "\n",
+    "    for symbol in punctuation:\n",
+    "        sentence = sentence.replace(symbol, '')\n",
+    "    \n",
+    "    words = sentence.split()\n",
+    "    if not words:\n",
+    "        return []\n",
+    "    \n",
+    "    max_length = max(len(word) for word in words)\n",
+    "    \n",
+    "    longest_words = [word for word in words if len(word) == max_length]\n",
+    "    \n",
+    "    return longest_words\n",
+    "\n",
+    "sentence = input(\"Enter a sentence: \")\n",
+    "longest = find_longest_words(sentence)\n",
+    "\n",
+    "print(f\"The sentence is: {sentence}\")\n",
+    "print(f\"Longest word(s): {longest}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -544,11 +576,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "64d9fad2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data: [4, 2, 20, 1, 8]\n",
+      "Range: 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "def value_range(data_list):\n",
+    "    if not data_list:\n",
+    "        return 0\n",
+    "    return max(data_list) - min(data_list)\n",
+    "\n",
+    "test_data = [4, 2, 20, 1, 8]\n",
+    "print(f\"Data: {test_data}\")\n",
+    "print(f\"Range: {value_range(test_data)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -566,11 +616,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "98dafa68",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Primes under 100: [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sieve_of_eratosthenes(limit):\n",
+    "    numbers = [True for n in range(limit + 1)]\n",
+    "    numbers[0] = numbers[1] = False  # 0 and 1 are not primes\n",
+    "    \n",
+    "    for i in range(2, int(limit**0.5) + 1):\n",
+    "        if numbers[i]:\n",
+    "            for j in range(i*i, limit + 1, i):\n",
+    "                numbers[j] = False\n",
+    "    \n",
+    "    primes = [i for i, is_prime in enumerate(numbers) if is_prime]\n",
+    "    return primes\n",
+    "\n",
+    "primes_under_100 = sieve_of_eratosthenes(100)\n",
+    "print(\"Primes under 100:\", primes_under_100)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -586,11 +659,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b3441ad4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added Kazi to queue\n",
+      "Added Nabiul to queue\n",
+      "Added Alam to queue\n",
+      "Current queue: ['Kazi', 'Nabiul', 'Alam']\n",
+      "Queue length: 3\n",
+      "Removed Kazi from queue\n",
+      "Current queue: ['Nabiul', 'Alam']\n",
+      "Removed Nabiul from queue\n",
+      "Removed Alam from queue\n",
+      "Error: Cannot remove from empty queue\n"
+     ]
+    }
+   ],
+   "source": [
+    "class SimpleQueue:\n",
+    "    def __init__(self):\n",
+    "        self.queue = []\n",
+    "    \n",
+    "    def print_queue(self):\n",
+    "        print(\"Current queue:\", self.queue)\n",
+    "    \n",
+    "    def add_customer(self, customer):\n",
+    "        self.queue.append(customer)\n",
+    "        print(f\"Added {customer} to queue\")\n",
+    "    \n",
+    "    def remove_customer(self):\n",
+    "        if self.is_empty():\n",
+    "            print(\"Error: Cannot remove from empty queue\")\n",
+    "            return None\n",
+    "        customer = self.queue.pop(0)\n",
+    "        print(f\"Removed {customer} from queue\")\n",
+    "        return customer\n",
+    "    \n",
+    "    def queue_length(self):\n",
+    "        return len(self.queue)\n",
+    "    \n",
+    "    def is_empty(self):\n",
+    "        return len(self.queue) == 0\n",
+    "\n",
+    "def test_queue():\n",
+    "    queue = SimpleQueue()\n",
+    "    \n",
+    "    queue.add_customer(\"Kazi\")\n",
+    "    queue.add_customer(\"Nabiul\")\n",
+    "    queue.add_customer(\"Alam\")\n",
+    "    \n",
+    "    queue.print_queue()\n",
+    "    print(\"Queue length:\", queue.queue_length())\n",
+    "    \n",
+    "    queue.remove_customer()\n",
+    "    queue.print_queue()\n",
+    "    \n",
+    "    queue.remove_customer()\n",
+    "    queue.remove_customer()\n",
+    "    queue.remove_customer()  # This should show error\n",
+    "\n",
+    "test_queue()"
+   ]
   },
   {
    "cell_type": "markdown",
